--- a/AnalisisNE/SupEstructura.tex
+++ b/AnalisisNE/SupEstructura.tex
@@ -13,10 +13,10 @@ Se puede demostrar que $(a,b) \in A\times B \To
 conjunto el cual contenga todas las relaciones entre números reales. Se
 define la colección $\R_n$ de la siguiente manera:
 \[
-  \begin{siseq}[\{,\}]
+  \begin{syseq}(\{,\})
     \R_0 &= \R\\
     \R_{n+1} &= \Pts{\bigcup_{k=1}^n \R_k}
-  \end{siseq}
+  \end{syseq}
 \]
 
 Se define entonces, la superestructura $\Rh$ por
@@ -27,7 +27,7 @@ de $\R$ serán llamados \emph{individuos}.
 \begin{lemma}[Propiedades de $\R_n$]\label{lema:Rn}~
   \begin{enumerate}
     \item $\Forall{n,m}[n,m\in\N \land n\leq m]{\R_{n+1} \subseteq \R_{m+1}}$
-    \item $\ds\Forall{n}[n\in\N]{\bigcup_{k=0}^n \R_k = \R_0 \cup \R_n}$
+    \item $\Forall{n}[n\in\N]{\bigcup_{k=0}^n \R_k = \R_0 \cup \R_n}$
     \item $\Forall{n,m}[n,m\in\N \land n \leq m]{R_n \in \R_{m+1}}$
     \item $\Forall{n,x,y}[n\in\N \land y\in\R_{n+1} \land x\in y]{x\in\R_0\cup\R_n}$
   \end{enumerate}
@@ -36,39 +36,39 @@ de $\R$ serán llamados \emph{individuos}.
   \begin{enumerate}
     \item Sean $n,m\in\N$ tales que $n\leq m$.
           \begin{longderivation}<.9>
-              \res{x\in\R_{n+1}}\\
+              \wff{x\in\R_{n+1}}\\
             \equiv\\
-              \res{x\subseteq \bigcup_{k=0}^n \R_k}\\
+              \wff{x\subseteq \bigcup_{k=0}^n \R_k}\\
             \To\\
-              \res{x\subseteq \bigcup_{k=0}^{m}\R_k}\\
+              \wff{x\subseteq \bigcup_{k=0}^{m}\R_k}\\
             \equiv\\
-              \res{x\in\R_{m+1}}
+              \wff{x\in\R_{m+1}}
           \end{longderivation}
     \item Sea $n\in\N$, si $n=0$ no hay algo que demostrar. Para $n\in\J$:
           \begin{longderivation}<.9>
-              \res{x\in\bigcup_{k=0}^n \R_k}\\
+              \wff{x\in\bigcup_{k=0}^n \R_k}\\
             \equiv\\
-              \res{ x\in \R_0 \lor x\in\bigcup_{k=1}^n \R_k }\\
+              \wff{ x\in \R_0 \lor x\in\bigcup_{k=1}^n \R_k }\\
             \why{(i)}\\
-              \res{ x\in\R_0 \lor x\in\R_n }\\
+              \wff{ x\in\R_0 \lor x\in\R_n }\\
             \equiv\\
-              \res{x\in\R_0\cup\R_n}
+              \wff{x\in\R_0\cup\R_n}
           \end{longderivation}
     \item Sean $n,m \in \N$ tales que $n \leq m$.
           \begin{longderivation}<.9>
-              \res{ \R_n \subseteq \bigcup_{k=0}^m\R_k }\\
+              \wff{ \R_n \subseteq \bigcup_{k=0}^m\R_k }\\
             \equiv\\
-              \res{\R_n \in \Pts{\bigcup_{k=0}^m\R_k}}\\
+              \wff{\R_n \in \Pts{\bigcup_{k=0}^m\R_k}}\\
             \equiv\\
-              \res{ \R_n \in \R_{m+1} }
+              \wff{ \R_n \in \R_{m+1} }
           \end{longderivation}
     \item Sean $n\in\N$, $y\in\R_{n+1}$ y $x\in y$.
           \begin{longderivation}<.9>
-              \res{ x \in y \land y \in \R_{n+1} }\\
+              \wff{ x \in y \land y \in \R_{n+1} }\\
             \why{(i)}\\
-              \res{ x \in y \land y \subseteq \R_0\cup\R_n }\\
+              \wff{ x \in y \land y \subseteq \R_0\cup\R_n }\\
             \To\\
-              \res{ x \in \R_0\cup\R_n }
+              \wff{ x \in \R_0\cup\R_n }
           \end{longderivation}
   \end{enumerate}
 \end{demo}
